Fixed work spacing and corrected date

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -50,6 +50,7 @@
         margin-bottom: 5%;
         display: flex;
         color: #2a2a2a;
+        justify-content: space-evenly;
         img {
             padding: 3%;
             height: fit-content;
